Small CSS fixes. Description box wraps text now. Added the subtotal, tax and total rows. Need to do calculations next.

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -85,6 +85,13 @@ address {
   }
 }
 
+.add-btn {
+  margin: 10px;
+  &:focus {
+    outline: none
+  }
+}
+
 *[contenteditable]:hover, *[contenteditable]:focus, td:hover *[contenteditable], td:focus *[contenteditable], img.hover {
     background: #def;
     -webkit-box-shadow: 0 0 1em 0.5em #def;
